--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet" />
         <link rel="stylesheet" href="./style.css" />
         <title>Bootstrap</title>
     </head>
     <body>
         <div class="container">
-            <h1>Let's build a memory game</h1>
-            <div class="ball-wrapper">
+            <p class="intro-text"></p>
+            <!-- <div class="ball-wrapper">
                 <div class="ball"></div>
                 <div class="ball"></div>
                 <div class="ball"></div>
-            </div>
+            </div> -->
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-        <script src="./game.js"></script>
+        <!-- <script src="./balls.js"></script> -->
+        <script src="./hack0r.js"></script>
     </body>
 </html>
