--- a/index.html
+++ b/index.html
@@ -11,15 +11,30 @@
     </head>
     <body>
         <div class="container">
-            <p class="intro-text"></p>
+            <!-- <p class="intro-text"></p> -->
             <!-- <div class="ball-wrapper">
                 <div class="ball"></div>
                 <div class="ball"></div>
                 <div class="ball"></div>
             </div> -->
+            <div id="board">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
         <!-- <script src="./balls.js"></script> -->
-        <script src="./hack0r.js"></script>
+        <!-- <script src="./hack0r.js"></script> -->
+        <script src="./memory.js"></script>
     </body>
 </html>
