--- a/index.html
+++ b/index.html
@@ -18,18 +18,54 @@
                 <div class="ball"></div>
             </div> -->
             <div id="board">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
+                <div class="card">
+                    <div class="front"></div>
+                    <div class="back"></div>
+                </div>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
