--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <title>Fake Flappy Birds</title>
     </head>
     <body>
-        <div class="container"></div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+        <!-- <div class="container"></div> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
         <script src="./birds.js"></script>
     </body>
 </html>
