--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <body>
         <!-- <div class="container"></div> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
-        <script src="./birds.js"></script>
+        <script src="./scripts/constants.js"></script>
+        <script src="./scripts/bird.js"></script>
+        <script src="./scripts/obstacle.js"></script>
+        <script src="./scripts/game.js"></script>
+        <script src="./scripts/index.js"></script>
     </body>
 </html>
