--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Fake Flappy Birds</title>
     </head>
     <body>
+        <h1>Score: 0</h1>
         <!-- <div class="container"></div> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
         <script src="./scripts/constants.js"></script>
